--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/sanctum": "^3.2",
         "laravel/socialite": "^5.8",
         "laravel/tinker": "^2.8",
+        "realrashid/sweet-alert": "^7.1",
         "yoeunes/toastr": "^2.3"
     },
     "require-dev": {
